[package]
publish = false
name = "qpack"
version = "0.0.0"
edition = "2021"
description = "QPACK in Rust"
authors = ["Julian Eager <eagr@tutanota.com>"]
license = "MIT OR Apache-2.0"
categories = ["network-programming"]
keywords = ["qpack"]
readme = "README.md"
repository = "https://github.com/eagr/qpack"
include = [
    "src/**/*",
    "README.md",
    "LICENSE-*",
]

[dependencies]
bytes = "1.3"
